--- a/Problem Set 2/PS2_2024.ipynb
+++ b/Problem Set 2/PS2_2024.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "f44d821a-1c8c-41fe-b47e-17eaa5c0b7d9",
    "metadata": {
     "tags": []
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "89707df7-deb8-4197-b97e-4e5cd40c6dc9",
    "metadata": {
     "tags": []
@@ -86,6 +86,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "5951fd1b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "841c8e0f-deb2-4e18-8c11-7dd20aac50e9",
    "metadata": {},
@@ -95,12 +114,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "642811f3-a9d7-4c9d-99e7-5afd940decda",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "In-sample plug-in\n",
+      "[ 0.07523849 -0.18689853  0.27333933  0.01714825  0.43734951  0.47500192\n",
+      " -0.0078309  -0.01809028 -0.0652578 ]\n",
+      "0.9059837789296394\n"
+     ]
+    }
+   ],
    "source": [
     "m = np.mean(excret, axis=0)\n",
     "S = np.cov(excret, rowvar=False, ddof=1)\n",
