--- a/Problem Set 2/PS2_2024.ipynb
+++ b/Problem Set 2/PS2_2024.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "f44d821a-1c8c-41fe-b47e-17eaa5c0b7d9",
    "metadata": {
     "tags": []
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "89707df7-deb8-4197-b97e-4e5cd40c6dc9",
    "metadata": {
     "tags": []
@@ -86,25 +86,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "5951fd1b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "9"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "841c8e0f-deb2-4e18-8c11-7dd20aac50e9",
    "metadata": {},
@@ -114,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "642811f3-a9d7-4c9d-99e7-5afd940decda",
    "metadata": {
     "tags": []
@@ -142,6 +123,53 @@
     "print(wr)\n",
     "psr = np.sqrt(12) * np.mean(pr) / np.std(pr, ddof=1)\n",
     "print(psr) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "edea9c1e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.99691472e-03,  1.54741039e-03,  1.98074451e-03,\n",
+       "         2.28713099e-03,  1.98534682e-05,  2.38795846e-04,\n",
+       "         2.79435816e-04,  1.38228993e-03,  1.97830469e-04],\n",
+       "       [ 1.54741039e-03,  2.42119522e-03,  1.59369838e-03,\n",
+       "         1.76209454e-03,  1.67486437e-05,  6.48286315e-04,\n",
+       "         2.66503105e-04,  1.20789911e-03,  4.22947597e-04],\n",
+       "       [ 1.98074451e-03,  1.59369838e-03,  2.53465897e-03,\n",
+       "         2.51001978e-03, -4.55192961e-05,  2.17256982e-04,\n",
+       "         2.62685413e-04,  1.68923964e-03,  7.60770539e-05],\n",
+       "       [ 2.28713099e-03,  1.76209454e-03,  2.51001978e-03,\n",
+       "         3.62812384e-03, -1.15643164e-04,  2.22068215e-04,\n",
+       "         2.37059157e-04,  1.82968416e-03,  2.15747810e-04],\n",
+       "       [ 1.98534682e-05,  1.67486437e-05, -4.55192961e-05,\n",
+       "        -1.15643164e-04,  3.36756184e-04,  1.85169263e-04,\n",
+       "         2.86852000e-04,  8.36623726e-05,  1.07740419e-04],\n",
+       "       [ 2.38795846e-04,  6.48286315e-04,  2.17256982e-04,\n",
+       "         2.22068215e-04,  1.85169263e-04,  6.11265891e-04,\n",
+       "         2.13650505e-04,  3.42838765e-04,  4.40762860e-04],\n",
+       "       [ 2.79435816e-04,  2.66503105e-04,  2.62685413e-04,\n",
+       "         2.37059157e-04,  2.86852000e-04,  2.13650505e-04,\n",
+       "         3.73179955e-04,  3.48911693e-04,  1.52902652e-04],\n",
+       "       [ 1.38228993e-03,  1.20789911e-03,  1.68923964e-03,\n",
+       "         1.82968416e-03,  8.36623726e-05,  3.42838765e-04,\n",
+       "         3.48911693e-04,  2.35229774e-03,  3.12569582e-04],\n",
+       "       [ 1.97830469e-04,  4.22947597e-04,  7.60770539e-05,\n",
+       "         2.15747810e-04,  1.07740419e-04,  4.40762860e-04,\n",
+       "         1.52902652e-04,  3.12569582e-04,  2.57532429e-03]])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "S"
    ]
   },
   {
